[package]
name = "chronos-engine-napi"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI bindings for chronos-engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
chronos-engine = { path = "../chronos-engine" }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
