[package]
name = "chronos-engine-wasm"
version = "0.1.3"
edition = "2021"
description = "WASM bindings for the Chronos datetime engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
chronos-engine = { path = "../chronos-engine" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
