[package]
name = "chronos-engine"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Chronos date/time and recurrence engine in Rust"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
